fix minor jump
Changed the border to a outline
so that adding to it didn't change height,
preventing the 1px jump i was seeing w/
my bitmap font

--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ a:active {
   display: inline-block;
 	height: 280px;
   width: auto;
-  border: solid 0vh var(--font-pri);
+  outline: solid 0vh var(--font-pri);
 }
 
 /*
